--- a/src/app/dashboard/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard/dashboard.component.html
@@ -1,2 +1,7 @@
-<router-outlet></router-outlet>
 <app-sidenav></app-sidenav>
+<section class="home-section">
+    <app-header></app-header>
+    <!-- <app-home></app-home> -->
+<router-outlet></router-outlet>
+
+</section>
