--- a/src/app/dashboard/home/home.component.html
+++ b/src/app/dashboard/home/home.component.html
@@ -1,1 +1,82 @@
-<button btn btn-danger (click)="logout()">Logout</button>
+<div class="custom-padding">
+    <section class="col-padding">
+      <ul class="four-dived">
+        <li>
+          <div class="earning-box">
+            <div class="total-1">
+              <p class="gray-total">Total Earning</p>
+              <p class="value-total text-green">+16.24 %</p>
+            </div>
+            <div class="usd-value">
+              <div class="left-usd">
+                <h4>$559.25k</h4>
+                <a >View net earnings</a>
+              </div>
+              <div class="right-usd">
+                <button class="usd-button green-color">
+                  <i class="bx bx-dollar-circle"></i>
+                </button>
+              </div>
+            </div>
+          </div>
+        </li>
+        <li>
+          <div class="earning-box">
+            <div class="total-1">
+              <p class="gray-total">ORDERS</p>
+              <p class="value-total text-red">-3.57 %</p>
+            </div>
+            <div class="usd-value">
+              <div class="left-usd">
+                <h4>36,894</h4>
+                <a >View net earnings</a>
+              </div>
+              <div class="right-usd">
+                <button class="usd-button blue-color">
+                  <i class="bx bx-shopping-bag"></i>
+                </button>
+              </div>
+            </div>
+          </div>
+        </li>
+        <li>
+          <div class="earning-box">
+            <div class="total-1">
+              <p class="gray-total">CUSTOMERS</p>
+              <p class="value-total text-green">+29.08 %</p>
+            </div>
+            <div class="usd-value">
+              <div class="left-usd">
+                <h4>183.35M</h4>
+                <a >See Details</a>
+              </div>
+              <div class="right-usd">
+                <button class="usd-button yellow-color">
+                  <i class="bx bx-shopping-bag"></i>
+                </button>
+              </div>
+            </div>
+          </div>
+        </li>
+        <li>
+          <div class="earning-box">
+            <div class="total-1">
+              <p class="gray-total">My Balance</p>
+              <p class="value-total text-silver">+0.00 %</p>
+            </div>
+            <div class="usd-value">
+              <div class="left-usd">
+                <h4>$165.89k</h4>
+                <a >Withdraw money</a>
+              </div>
+              <div class="right-usd">
+                <button class="usd-button red-color">
+                  <i class="bx bx-wallet"></i>
+                </button>
+              </div>
+            </div>
+          </div>
+        </li>
+      </ul>
+    </section>
+  </div>
