Working on signup form

--- a/src/app/dashboard/sidenav/sidenav.component.html
+++ b/src/app/dashboard/sidenav/sidenav.component.html
@@ -28,9 +28,9 @@
             </li>
 
             <li class="nav-link">
-              <a >
+              <a routerLink="/dashboard/add-member">
                 <i class="mdi mdi-view-carousel-outline"></i>
-                <span class="text nav-text">Layouts</span>
+                <span class="text nav-text">Add Member</span>
               </a>
             </li>
           </ul>
