--- a/src/app/dashboard/home/home.component.css
+++ b/src/app/dashboard/home/home.component.css
@@ -1,4 +1,4 @@
-.custom-padding {
+/* .custom-padding {
     padding: 30px;
   }
 
@@ -56,4 +56,70 @@ p.value-total {
     color: #495057;
     margin-bottom: 20px;
   }
-  
+   */
+
+   mat-grid-tile {
+    background: rgb(203, 203, 204);
+    /* padding: 20px; */
+  }
+  /* .profile{
+    padding: 20px;
+  } */
+  /* .hey{
+    margin: 20px;
+    padding: 20px;
+  } */
+  *{
+    overflow: hidden;
+  }
+  mat-card{
+    width: 100%;
+    height: 100%;
+  }
+  element.style {
+    width: calc((50% - 21.5px) * 1 + 0px)!important;
+    padding-top: calc((25% - 0.5px) * 1 + 0px);
+}
+.parent{
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-gap: 20px;
+  padding: 10px;
+}
+
+.main{
+  display: grid;
+  grid-template-columns: 2fr 5fr;
+}
+i{
+  font-size: 25px;
+  color: white;
+  padding: 10px;
+  background-color: #019aff;
+  border-radius: 5px;
+
+}
+.child{
+  padding: 15px;
+}
+.value{
+  display: flex;
+  flex-direction: column;
+  /* align-items: center; */
+  justify-content: center;
+}
+.dashboard{
+  padding: 20px 10px;
+  justify-content: space-between;
+}
+
+/* ------------Employee Table -------------- */
+/* Structure */
+table {
+  width: 100%;
+}
+
+.mat-form-field {
+  font-size: 14px;
+  width: 100%;
+}
