--- a/src/app/dashboard/sidenav/sidenav.component.css
+++ b/src/app/dashboard/sidenav/sidenav.component.css
@@ -179,6 +179,24 @@ p.value-total {
 
 
 
+/* .sidebar[_ngcontent-ipc-c211] .text[_ngcontent-ipc-c211] {
+  font-size: 17px;
+  font-weight: 400;
+  white-space: nowrap;
+  opacity: 1;
+  color: #a3a6b7;
+  transition: all 0.3s ease;
+}
+a.active span {
+  color: red!important;
+} */
+
+
+
+.sidebar a.active span{
+  color: white!important;
+  font-weight: 500;
+}
 
 
 
@@ -186,5 +204,61 @@ p.value-total {
 
 
 
+.example-accordion {
+  display: block;
+  max-width: 500px;
+}
 
+.example-accordion-item {
+  /* display: block; */
+  /* border: solid 1px #ccc; */
+}
 
+/* .example-accordion-item + .example-accordion-item {
+  border-top: none;
+} */
+
+/* .example-accordion-item-header {
+  display: flex;
+  align-content: center;
+  justify-content: space-between;
+} */
+
+.example-accordion-item-description {
+  font-size: 0.85em;
+  color: white!important;
+}
+
+.example-accordion-item-header,
+.example-accordion-item-body {
+  padding: 16px;
+}
+
+.example-accordion-item-header:hover {
+  cursor: pointer;
+  /* background-color: #eee; */
+}
+
+/* .example-accordion-item:first-child {
+  border-top-left-radius: 4px;
+  border-top-right-radius: 4px;
+}
+
+.example-accordion-item:last-child {
+  border-bottom-left-radius: 4px;
+  border-bottom-right-radius: 4px;
+} */
+
+ul li{
+  list-style: none;
+  color: #9092a4;
+}
+
+.example-accordion-item-header{
+  font-size: 17px;
+    font-weight: 400;
+    white-space: nowrap;
+    opacity: 1;
+    color: #a3a6b7;
+    transition: all 0.3s ease;
+}
