--- a/src/app/dashboard/header/header.component.html
+++ b/src/app/dashboard/header/header.component.html
@@ -1,9 +1,17 @@
   <div class="header home-content">
     <div class="search">
-      <div class="bar-icon"> <img (click)="toggle()" src="../../../assets/./img/bars-solid.svg" style="height: 30px;" class="mx-3" alt=""></div>
+      <!-- <div class="bar-icon"> <img (click)="toggle()" src="../../../assets/./img/bars-solid.svg" style="height: 30px;" class="mx-3" alt=""></div> -->
         <!-- <p routerLink="../dashboard/profile">Profile</p> -->
     </div>
     <div class="header-nav mx-3">
-        <a (click)="logout()">Logout</a>
+        <!-- <a (click)="logout()">Logout</a> -->
+
+      <button mat-button color="primary" (click)="openDialog()">
+        Logout
+      </button>
+
+
+
+
     </div>
   </div> 
