--- a/src/app/dashboard/employee/emp-list/emp-list.component.html
+++ b/src/app/dashboard/employee/emp-list/emp-list.component.html
@@ -10,12 +10,15 @@
     </thead>
     <tbody>
 
-      <tr *ngFor="let user of allEmp.data">
+      <tr *ngFor="let user of EmployeeList">
         <!-- <th scope="row">1</th> -->
         <td>{{user.id}}</td>
         <td>{{user.name}}</td>
         <td>{{user.email}}</td>
-        <td><button class="btn btn-warning">Edit</button> <button class="btn btn-danger mx-3">Delete</button></td>
+        <td>
+          <button class="btn btn-primary" (click)="EditEmployee(user.id)">Edit</button> 
+          <button class="btn btn-danger mx-3" (click)="DeleteEmployee(user.id)">Delete</button>
+        </td>
       </tr>
       
     </tbody>
