--- a/src/app/dashboard/sidenav/sidenav.component.html
+++ b/src/app/dashboard/sidenav/sidenav.component.html
@@ -60,8 +60,9 @@
                 [attr.id]="'accordion-body-' + index"
                 [attr.aria-labelledby]="'accordion-header-' + index">
                 
-                <ul>
+                <ul class="" style="margin-top: -20px; margin-left: 30px;">
                   <li routerLinkActive="active"  routerLink="./emp-list" [routerLinkActiveOptions]="{exact: true}" >Employee List</li>
+                  <!-- <li routerLinkActive="active"  routerLink="./emp-list" [routerLinkActiveOptions]="{exact: true}" >Employee List</li> -->
                 </ul>
               </div>
             </cdk-accordion-item>
