--- a/src/app/Authentication/login/login.component.html
+++ b/src/app/Authentication/login/login.component.html
@@ -1,3 +1,6 @@
+
+<ngx-snackbar [position]="'top-right'" [max]="3"></ngx-snackbar>
+
 <div class="container-fluid">
   <div class="row">
     <div class="col-lg-8 col-md-6 col-sm-12 abc text-center">
@@ -52,6 +55,11 @@
         </div>
         
       </form>
+      <!-- <button (click)="add()">Add Snackbar</button>
+      <br>
+      <button (click)="clear()">Clear</button> -->
+      
+      
     </div>
   </div>
 </div>
