--- a/src/app/dashboard/profile/profile.component.html
+++ b/src/app/dashboard/profile/profile.component.html
@@ -1,21 +1,31 @@
-<div class="row m-0" fxLayoutAlign="center center"
-fxLayout="column" style="height: 80vh;">
-    <div class="card  col-sm-10 col-md-6" >
-        <!-- <img src="..." class="card-img-top" alt="..."> -->
-      <div class="row">
-        <div class="col-sm-4 p-3">
-            <h5>Pofile Picture</h5>
-            
-        </div>
-        <div class="col-sm-8">
-            <div class="card-body ">
-                <h5 class="card-title">User Profile</h5>
-                <p class="card-text"> <strong>ID:</strong>{{profileData[0].id}} </p>
-                <p class="card-text"> <strong>Name:</strong>{{profileData[0].name}} </p>
-                <p class="card-text"> <strong>Email:</strong>{{profileData[0].email}} </p>
-                <a class="btn btn-primary" routerLink="../../dashboard">Home</a>
-              </div>
+<div
+  class="row m-0"
+  fxLayoutAlign="center center"
+  fxLayout="column"
+  style="height: 80vh"
+>
+  <div class="card col-sm-10 col-md-6">
+    <!-- <img src="..." class="card-img-top" alt="..."> -->
+    <div class="row">
+
+      <div class="col-sm-4 p-3">
+        <h5>Pofile Picture</h5>
+      </div>
+
+      <div class="col-sm-8">
+        <div class="card-body">
+          <h5 class="card-title">User Profile</h5>
+          <p class="card-text"><strong>ID:</strong>{{ profileData[0].id }}</p>
+          <p class="card-text">
+            <strong>Name:</strong>{{ profileData[0].name }}
+          </p>
+          <p class="card-text">
+            <strong>Email:</strong>{{ profileData[0].email }}
+          </p>
+          <a class="btn btn-primary" routerLink="../../dashboard">Home</a>
         </div>
       </div>
-      </div>
+      
+    </div>
+  </div>
 </div>
