--- a/src/app/dashboard/add-member/add-member.component.html
+++ b/src/app/dashboard/add-member/add-member.component.html
@@ -167,7 +167,7 @@
               />
             </mat-form-field>
 
-          <input type="file" (change)="fileupload($event)">
+          <input type="file" onchange="console.log(event.target.files)" formControlName="profile_picture">
     
          
 
