--- a/src/app/dashboard/employee/emp-edit/emp-edit.component.html
+++ b/src/app/dashboard/employee/emp-edit/emp-edit.component.html
@@ -1,1 +1,106 @@
-<p>emp-edit works!</p>
+<div class="container">
+  <div class="row">
+    <h2 class="text-center my-3">Edit Employees Details</h2>
+    <form [formGroup]="editForm" (ngSubmit)="updateEmployee()">
+      <div class="row">
+        <div class="form-group col-md-4">
+          <label for="exampleInputEmail1 ">Name</label>
+          <input type="email" class="form-control" formControlName="name">
+        </div>
+        <div class="col-md-1"></div>
+        <div class="form-group col-md-3">
+          <label for="exampleInputPassword1">Role Id</label>
+          <input type="text" class="form-control"  formControlName="role_id">
+        </div>
+        <div class="col-md-1"></div>
+        <div class="form-group col-md-3">
+          <label for="exampleInputPassword1">Email</label>
+          <input type="text" class="form-control"   formControlName="email" placeholder="abc@gmail.com">
+        </div>
+      
+
+      <div class="form-group col-md-4 my-3">
+        <label for="exampleInputEmail1 ">Password</label>
+        <input type="password" class="form-control" formControlName="password">
+      </div>
+      <div class="col-md-1"></div>
+      <!-- <div class="form-group col-md-3 my-3">
+        <label for="exampleInputPassword1">Confirm Password</label>
+        <input type="password_confirmation " class="form-control"  formControlName="password_confirmation">
+      </div> -->
+      <div class="col-md-1"></div>
+      <div class="form-group col-md-3 my-3">
+        <label for="exampleInputPassword1">Date Of Birth</label>
+        <input type="text" class="form-control"   formControlName="date_of_birth" placeholder="YYYY/MM/DD">
+      </div>
+
+      <div class="form-group col-md-4 my-3">
+        <label for="exampleInputEmail1 ">Address</label>
+        <input type="password" class="form-control" formControlName="address">
+      </div>
+      <div class="col-md-1"></div>
+      <div class="form-group col-md-3 my-3">
+        <label for="exampleInputPassword1">Contact Number</label>
+        <input type="password_confirmation " class="form-control"  formControlName="contact_number">
+      </div>
+      <div class="col-md-1"></div>
+      <div class="form-group col-md-3 my-3">
+        <label for="exampleInputPassword1">Emergency Contact Number</label>
+        <input type="text" class="form-control"   formControlName="emergency_contact_number" >
+      </div>
+
+      <div class="form-group col-md-4 my-3">
+        <label for="exampleInputEmail1 ">Employee ID </label>
+        <input type="text" class="form-control" formControlName="employee_id">
+      </div>
+      <div class="col-md-1"></div>
+      <div class="form-group col-md-3 my-3">
+        <label for="exampleInputPassword1">Designation ID</label>
+        <input type="password_confirmation " class="form-control"  formControlName="designation_id">
+      </div>
+      <div class="col-md-1"></div>
+      <div class="form-group col-md-3 my-3">
+        <label for="exampleInputPassword1">Department ID</label>
+        <input type="text" class="form-control"   formControlName="department_id" >
+      </div>
+      
+
+      <div class="form-group col-md-4 my-3">
+        <label for="exampleInputEmail1 ">Employee Status ID </label>
+        <input type="text" class="form-control" formControlName="employee_status_id">
+      </div>
+      <div class="col-md-1"></div>
+      <div class="form-group col-md-3 my-3">
+        <label for="exampleInputPassword1">Gender </label>
+        <input type="text " class="form-control"  formControlName="gender">
+      </div>
+      <div class="col-md-1"></div>
+      <div class="form-group col-md-3 my-3">
+        <label for="exampleInputPassword1">About Me</label>
+        <input type="text" class="form-control"   formControlName="about_me" >
+      </div>
+
+
+      <div class="form-group col-md-4 my-3">
+        <label for="exampleInputEmail1 ">Gender</label>
+        <input type="text" class="form-control" formControlName="gender">
+      </div>
+      <div class="col-md-1"></div>
+      <div class="form-group col-md-3 my-3">
+        <label for="exampleInputPassword1">About Me </label>
+        <input type="password_confirmation " class="form-control"  formControlName="about_me">
+      </div>
+      <div class="col-md-1"></div>
+      <!-- <div class="form-group col-md-3 my-3">
+        <label for="exampleInputPassword1">Profile Picture</label>
+        <input type="file" class="form-control"   formControlName="profile_picture" >
+      </div> -->
+
+    </div>
+
+    <div class="text-center ">
+      <button class="btn btn-primary" (click)=" updateEmployee">Update Info</button>
+    </div>
+    </form>
+  </div>
+  </div>
